src/test/deca/syntax/invalid/invalid-float2.deca
{
    float x = 1e-50; // Trop petit pour IEEE-754 simple précision
}
